[project]
name = "supercharleyyygalaxy"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan Setaruddin",email = "coolry1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arcade (>=3.3.3,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "django (>=6.0,<7.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "panda3d (>=1.10.15,<2.0.0)",
    "adventurelib (>=1.2.1,<2.0.0)",
    "pytiled-parser (>=2.2.9,<3.0.0)",
    "tmxlib (>=0.2.1,<0.3.0)",
    "simplejson (>=3.20.2,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pysimplegui (>=5.0.8.3,<6.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
